--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,20 @@
+body{
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+
+#main-container{
+    width: 60%;
+    height: 90vh;
+    display: flex;
+    align-items: center;
+}
+
 .img-container img{
+    display: flex;
+    justify-content: center;
     width: 100%;
     height: auto;
 }
