--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,57 @@ body{
     font-family: 'Raleway', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.stag{
+    background: rgb(255,255,255);
+background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(255,102,143,1) 67%, rgba(255,134,218,1) 100%);
+}
+
+.unicorn{
+    background: rgb(255,255,255);
+background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(225,220,254,1) 67%, rgba(90,154,215,1) 100%);
+}
+
+.cat{
+    background: rgb(255,255,255);
+background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(255,160,42,1) 67%, rgba(255,103,46,1) 100%);
+}
+
+.dragon{
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(171,61,50,1) 67%, rgba(0,0,0,1) 100%);
+}
+
+.lizard{
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(195,214,148,1) 67%, rgba(0,0,0,1) 100%);
+
+}
+
+.octopus{
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(98,42,138,1) 67%, rgba(158,95,208,1) 100%);
+}
+
+.owl{
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(3,99,105,1) 67%, rgba(93,220,171,1) 100%);
+}
+
+.pig{
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(169,54,95,1) 67%, rgba(255,115,155,1) 100%);
+}   
+
+.rainbow{
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(24,240,163,1) 67%, rgba(255,10,0,1) 100%);
+}
+
+.sheep{
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(210,210,210,1) 67%, rgba(63,73,137,1) 100%);
+}
+
 #main-container{
     width: 60%;
     height: 100vh;
