background-colors angepasst

--- a/styles.css
+++ b/styles.css
@@ -51,17 +51,17 @@ body{
 
 .octopus{
     background: rgb(255,255,255);
-    background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(98,42,138,1) 67%, rgba(158,95,208,1) 100%);
+    background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(158,95,208,1) 67%, rgba(98,42,138,1) 100%);    
 }
 
 .owl{
     background: rgb(255,255,255);
-    background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(3,99,105,1) 67%, rgba(93,220,171,1) 100%);
+    background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(93,220,171,1) 67%, rgba(3,99,105,1) 100%);
 }
 
 .pig{
     background: rgb(255,255,255);
-    background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(169,54,95,1) 67%, rgba(255,115,155,1) 100%);
+    background: radial-gradient(circle, rgba(255,255,255,1) 3%, rgba(255,115,155,1) 67%, rgba(169,54,95,1) 100%);
 }   
 
 .rainbow{
@@ -102,4 +102,9 @@ input {
     justify-content: center;
     width: 100%;
     height: auto;
+}
+
+label,
+h2{
+    font-size: 2em;
 }
