--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@
 
 body{       
     width: 100%;
+    height: auto;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -86,7 +87,7 @@ body{
 
 #main-container{
     width: 60%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -117,7 +118,7 @@ input {
 /* header */
 
 h1{
-    font-family:  'Luckiest Guy', 'Raleway', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:  'Luckiest Guy', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 label,
