--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,10 @@
     font-family: 'Luckiest Guy';
     font-style: normal;
     font-weight: 400;
-    src: url('resources/fonts/luckiest-guy-v23-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('resources/fonts/luckiest-guy/luckiest-guy-v23-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
 
 body{       
-    width: 100%;
-    height: auto;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -86,8 +84,8 @@ body{
 }
 
 #main-container{
-    xwidth: 60%;
-    height: 100%;
+    width: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -95,7 +93,7 @@ body{
     gap: 2em;
 }
 
-.counter-container{
+.counter-container, .container{
     font-size: 2em;
     display: flex;
     flex-direction: column;
@@ -111,8 +109,6 @@ input {
 .img-container img{
     display: flex;
     justify-content: center;
-    width: 100%;
-    height: auto;
 }
 
 /* header */
