--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@
 
 body{       
     margin: 0 auto;
+    padding: 2em 0;
     display: flex;
     justify-content: center;
     font-family: 'Raleway', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -90,10 +91,9 @@ body{
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    gap: 2em;
 }
 
-.counter-container, .container{
+.container{
     font-size: 2em;
     display: flex;
     flex-direction: column;
@@ -101,14 +101,28 @@ body{
     align-items: center;
 }
 
+.counter-container{
+    flex-direction: row;
+    justify-content: space-between;
+    width: 30%;
+    margin-bottom: 1em;
+}
+
+.input-container{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 30%;
+}
+
+.img-container{
+    flex-direction: row!important;
+}
+
 input {
     border: none;
     display: none;
-}
-
-.img-container img{
-    display: flex;
-    justify-content: center;
 }
 
 /* header */
