--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,8 @@ body{
     display: flex;
     justify-content: center;
     font-family: 'Raleway', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 100%;
+    height: 100vh;
 }
 
 /* background-color for animals */
@@ -112,17 +114,26 @@ body{
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: space-between;
-    width: 30%;
+    justify-content: space-around;
+    width: 35%;
 }
 
 .img-container{
     flex-direction: row!important;
+
+    img{
+        width: 80%;
+        height: auto;
+    }
 }
 
 input {
-    border: none;
     display: none;
+
+    h2{
+        margin: 0;
+        padding: 0;
+    }
 }
 
 /* header */
@@ -165,13 +176,19 @@ h2{
     font-size: 3em;
     width: 50%;
     height: fit-content;
-    background: #e3e2e2c9;
+    background: #d7d5d5c9;
     padding: 2%;
     border-radius: 30px;
 
     p{
         text-align: center;
     }
+}
+  /* positioning div with #winnerText */
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 button{
